<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/top_options_frame"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentTop="true"
    android:background="@android:color/transparent"
    android:orientation="horizontal" >


    <TextView
        android:id="@+id/totalWatchers"
        style="@style/btnStyleArsenic"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@null" />

    <ImageButton
        android:id="@+id/shareLocation"
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@null"
        android:clickable="true"
        android:contentDescription="@string/share_location"
        android:onClick="shareLocation"
        android:prompt="@string/share_location"
        android:src="@drawable/location" />

    <ImageButton
        android:id="@+id/viewSharers"
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@null"
        android:clickable="true"
        android:contentDescription="@string/view_sharers"
        android:onClick="whoHasAccepted"
        android:prompt="@string/view_sharers"
        android:src="@drawable/watching" />

    <ImageButton
        android:id="@+id/selectCamera"
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@null"
        android:clickable="true"
        android:contentDescription="switch camera"
        android:onClick="switchCamera"
        android:prompt="@string/select_camera"
        android:src="@drawable/switch_camera" />

</LinearLayout>